Closed
Bug 755994
Opened 10 years ago
Closed 10 years ago
CSS text-shadow is incorrectly rendered for selected RTL text
Categories
(Core :: Layout: Text and Fonts, defect)
Core
Layout: Text and Fonts
Tracking
()
RESOLVED
FIXED
mozilla15
People
(Reporter: tsdodo, Assigned: smontagu)
References
Details
(Keywords: regression)
Attachments
(3 files, 1 obsolete file)
6.00 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
4.07 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
478 bytes,
text/html
|
Details |
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:12.0) Gecko/20100101 Firefox/12.0 Build ID: 20120420145725 Steps to reproduce: I selected right-to-left text with a text-shadow CSS rule. Actual results: The shadow disappeared on each line on which a selection was active except for a tiny area on the right-most side. Expected results: The shadow should have rendered as it would in selecting left-to-right text.
Updated•10 years ago
|
Component: Untriaged → Layout: Text
Product: Firefox → Core
QA Contact: untriaged → layout.fonts-and-text
Assignee | ||
Updated•10 years ago
|
Assignee: nobody → smontagu
Assignee | ||
Comment 1•10 years ago
|
||
This is essentially a one-line patch: for RTL we need to calculate the left edge of the selection as xoffset - width in the call to PaintOneShadow, just as we do in the call to FillClippedRect a few lines above. In practice it's a bit more complicated: to get at the width for the calculation, I've had to pull the call to MeasureText out of PaintOneShadow to the callers. Measuring the text only once when there are multiple shadows should also be a modest performance win.
Attachment #624697 -
Flags: review?(roc)
Assignee | ||
Comment 2•10 years ago
|
||
These are just copies of the existing text-shadow-selected-1* tests with RTL text.
Attachment #624699 -
Flags: review?(roc)
Assignee | ||
Comment 3•10 years ago
|
||
Updated reftests using <bdo> -- using Hebrew has font issues.
Attachment #624699 -
Attachment is obsolete: true
Attachment #624699 -
Flags: review?(roc)
Attachment #624700 -
Flags: review?(roc)
Assignee | ||
Comment 4•10 years ago
|
||
This is a regression from the range http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=b4da2d439cbc&tochange=e9c620a5c85f -- presumably bug 692752.
Blocks: 692752
Keywords: regression
Attachment #624697 -
Flags: review?(roc) → review+
Attachment #624700 -
Flags: review?(roc) → review+
Assignee | ||
Comment 5•10 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/414b22167f9d https://hg.mozilla.org/integration/mozilla-inbound/rev/c479a917544a
Flags: in-testsuite+
Target Milestone: --- → mozilla15
Assignee | ||
Comment 6•10 years ago
|
||
Assignee | ||
Updated•10 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Assignee | ||
Updated•10 years ago
|
OS: Windows 7 → All
Hardware: x86_64 → All
Version: 12 Branch → Trunk
Comment 7•10 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/414b22167f9d https://hg.mozilla.org/mozilla-central/rev/c479a917544a
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•