Start painting text shadow of selection from the left edge in RTL text. Bug 755994, r=roc